feat: add html markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,186 @@
     <title>Akim Rise CV</title>
 </head>
 <body>
-    
+        <main>
+        <div class="wrapper">
+            <div class="wrapper__left">
+
+                <!-- professional -->
+                <div class="professional">
+                    <div class="professional__photo">
+                        <img src="img/cv_photo.jpg" alt="cv photo">
+                    </div>
+                    <div class="professional__name">
+                        <h1>Akim Rise</h1>
+                    </div>
+                    <div class="professional__position">
+                        <h2 class="pro-position">Web Developer</h2>
+                    </div>
+                </div>
+                <!-- // professional -->
+
+                <!-- introduction -->
+                <section class="introduction">
+                    <h2>About me</h2>
+                    <div class="introduction__text">
+                        <p>I am a responsible and hardworking person who puts maximum effort into every task they take. I am ambitious and dedicated to learning new things and developing my skills. I am quite outgoing, so I’m keen on working in teams. I like spending time exploring new ideas. I do sports regularly and I am a huge fan of cycling. My goal is to become a frontend developer, which is why I am eager to study and improve my professional skills and to expand my knowledge.</p>
+                    </div>
+                </section>
+                <!-- // introduction -->
+
+                <!-- contacts -->
+                <section class="contacts">
+                    <h2>contacts</h2>
+                    <div class="container">
+                        <div class="city">
+                            <div class="city__icon">
+                                <img src="img/contacts/location.png" alt="city">
+                            </div>
+                            <p>Ust-Kamenogorsk, Kazakhstan</p>
+                        </div>
+                        <a href="https://t.me/Akim19xx"><div class="telegram">
+                            <div class="telegram__icon">
+                                <img src="img/contacts/telegram.svg" alt="telegram">
+                            </div>
+                            <p>@Akim19xx</p>
+                        </div></a>
+                        <a href="mailto:inspi47@gmail.com"><div class="mail">
+                            <div class="mail__icon">
+                                <img src="img/contacts/gmail.png" alt="gmail">
+                            </div>
+                            <p>inspi47@gmail.com</p>
+                        </div></a>
+                        
+                    </div>
+                </section>
+                <!-- // contacts -->
+
+                <!-- skills -->
+                <section class="skills">
+                    <h2>Skills</h2>
+                    <div class="container-skills">
+                        <div class="pro-languages">
+                            <div class="html">
+                                <img src="img/languages/html-5.png" alt="HTML5">
+                                <p>HTML5</p>
+                            </div>
+                            <div class="css">
+                                <img src="img/languages/css-3.png" alt="CSS3">
+                                <p>CSS3</p>
+                            </div>
+                            <div class="js">
+                                <img src="img/languages/java-script.png" alt="JavaScript">
+                                <p>JavaScript</p>
+                            </div>
+                            <div class="git">
+                                <img src="img/languages/git.png" alt="Git">
+                                <p>Git</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- // skills --> 
+            </div>
+
+            <div class="wrapper__right">
+
+                <!--education-->
+                <section class="education">
+                    <h2>Education</h2>
+                    <div class="education__university-logo">
+                        <a href="https://www.do.ektu.kz/doektu/?lang=en"><img src="img/education/university.png" alt="university-logo"></a>
+                        <div class="education__improvise-table">
+                            <div class="education__col-1">
+                                <p>University:</p>
+                                <p>Faculty/College:</p>
+                                <p>Specialty:</p>
+                                <p>Degree (diploma):</p>
+                                <p>Graduation Year:</p>
+                            </div>
+                            <div class="education__col-2">
+                                <p>D. Serikbayev East Kazakhstan State Technical University</p>
+                                <p class="IT">Information Technology</p>
+                                <div class="education__col-3">
+                                    <p>Control and Automation</p>
+                                    <p>Mechatronics & Robotics</p>
+                                </div>
+                                <div class="education__col-4">
+                                    <p>Bachelor</p>
+                                    <p>Master</p>
+                                </div>
+                                <div class="education__col-5">
+                                    <p>2016</p>
+                                    <p>2018</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>   
+                </section>
+                <!-- // education-->
+
+                <!--experience-->
+                <section class="experience">
+                    <h2>experience</h2>
+                    <div class="experience__background">
+                        <p>Software Engineer, Energoinform, 10/2018 to 02/2020</p>
+                        <ul>
+                            <li>Development of new projects using C# .NET for interacting with databases, the automation of report generation in MS Excel.</li>
+                            <li>Writing documentation for newly created projects.</li>
+                            <li>Software troubleshooting on the spot for customers.</li>
+                            <li>Stand-up meetings twice a week to check progress and plan new work.</li>
+                            <li>Communication with customer via email, over the phone, and in person.</li>
+                        </ul>
+                        <p>Engineer, Energoinform, 02/2020 — Till now</p>
+                        <ul>
+                            <li>Support of existing projects written in MS Excel (VBA).</li>
+                            <li>Communication with customer via email, over the phone, and in person.</li>
+                        </ul>
+                    </div>
+                </section>
+                <!--// experience-->
+
+                <!--code-->
+                <section class="code">
+                    <h2>code example</h2>
+                    <div class="code__taks">
+                        <p id="codewars">CODEWARS: This kata is about multiplying a given number by eight if it is an even number and by nine otherwise.</p>
+                        <pre>
+                            <code>
+                                function simpleMultiplication(number){
+                                    return number % 2 == 0 ? number * 8 : number * 9
+                                }
+                            </code>
+                        </pre>
+                    </div>
+                </section>
+                <!--// code-->
+
+                <!-- language -->
+                <section class="language">
+                    <h2>language</h2>
+                    <ul>
+                        <li>English: Pre-intermediate(A2)</li>
+                        <li>Russian: Native</li>
+                    </ul>
+                </section>
+                <!--// language -->
+            </div>
+        </div>
+        <footer>
+            <div class="footer-container">
+                <div class="date-logo">
+                    <div class="git-date">
+                        <a href="https://github.com/Riakol"><img src="img/footer/github.png" alt="Github"></a>
+                        <p>2022 © by Akim Rise</p>
+                    </div>
+                </div>
+                <div class="rs-logo">
+                    <a href="https://rs.school/">
+                        <img src="img/footer/rs_school_js.svg" alt="rs-school-logo">
+                    </a>
+                </div>
+            </div>
+        </footer>
+    </main>  
 </body>
 </html>
