refactor: change education description

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <p class="IT">Information Technology</p>
                                 <div class="education__col-3">
                                     <p>Control and Automation</p>
-                                    <p>Mechatronics & Robotics</p>
+                                    <p>Mechatronics and Robotics</p>
                                 </div>
                                 <div class="education__col-4">
                                     <p>Bachelor</p>
